# gd-capture-external

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  SConstruct  testing.py  window-capture.gdextension
source/: CMakeLists.txt  capture-base.cpp  capture-base.hpp  gd-capture-external.cpp  gd-capture-external.hpp  plugin.cpp  register_types.cpp  x11-display-capture.cpp  x11-display-capture.hpp  x11-window-capture.cpp  x11-window-capture.hpp  xhelpers.c  xhelpers.h
src/: capture-base.cpp  capture-base.hpp  capture-base.os  capture.interop.h  d3dHelpers.h  direct3d11.interop.h  pch.h  register_types.cpp  register_types.h  register_types.os  sway-ipc-client.c  sway-ipc-client.h  sway-structs.cpp  sway-structs.h  window-poller.cpp  window-poller.h  window-poller.os  window_capture_texture.cpp  window_capture_texture.h  window_capture_texture.os
